2007-01-28  Keishi Suenaga <skeishi@yahoo.co.jp>

	* interface/rtsyn_common.c: fix sysex check 
	* timidity/portaudio_a.c    small fix for compiling
	* timidity/timidity.c       w32 cfg file sequence changed
	                            option > exe dir > win dir
	* timidity/w32_a.c          small fix for compiling
	* windrv/Makefile.am        re-add add timidity.idl
	* windrv/timiditydrv.c      re-add MIDIOUTCAPS2A(W)
	* windrv/timiditydrv.idl    re-add

2007-01-14  Keishi Suenaga <skeishi@yahoo.co.jp>

    * timidity/flac_a.c
      timidity/gogo_a.c
      timidity/speex_a.c
      timidity/vorbis_a.c
      timidity/wave_a.c
      timidity/output_a.c: fix for autofilename

2007-01-13  Keishi Suenaga <skeishi@yahoo.co.jp>

    * timidity/wave_a.c: fix for server interface.

2007-01-12  Keishi Suenaga <skeishi@yahoo.co.jp>

    * timidity/wave_a.c: fix for autofilname.

2007-01-05  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c (main): Fix to avoid segmentation fault
	  when "." or nonexistent archive name is given

2007-01-04  Keishi Suenaga <skeishi@yahoo.co.jp>

	Fix -iW and timiditydrv.dll sound problem.
	* timidity/portaudio_a.c: fix buffer overlow.

2007-01-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/midi_a.c (M_FWRITE):
	  Keep backward compatibility for gcc-2.95 or earlier
	* timidity/timidity.c (parse_opt_output_device): Change a bit

2007-01-03  Keishi Suenaga <skeishi@yahoo.co.jp>

	Fix -iW and timiditydrv.dll sound problem.
	* timidity/portaudio_a.c: remove broken acntl()s.

2007-01-01  Keishi Suenaga <skeishi@yahoo.co.jp>

	* timidity/timidity.c, timidity/w32_a.c,
	  timidity/portaudio_a.c: can select output device.

2007-01-01  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Added support for GM2 Master Fine/Coarse Tuning, GS Master Tune
	  and XG Master Tuning (4C not 27) SysEx.
	* timidity/readmidi.c: Fix suspected typo.
	* libarc/unlzh.c: Reverted a useless fix of the previous commit.
